[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/dioxus-class"
repository = "https://github.com/edger-dev/dioxus-class"

[workspace]
members = [
    "crates/dioxus-class",
    "crates/dioxus-tailwindcss",
    "crates/dioxus-daisyui",
    "demo/emoji-browser",
    "demo/emoji-browser/static",
]

[workspace.dependencies]
dioxus = "0.4.0"
dioxus-class = { path = "crates/dioxus-class", version = "0.4.0" }
dioxus-tailwindcss = { path = "crates/dioxus-tailwindcss", version = "0.4.0" }
dioxus-daisyui = { path = "crates/dioxus-daisyui", version = "0.4.0" }

paste = "1.0.11"

# demo
lazy_static = "1.4.0"
dioxus-ssr = "0.4.0"
dioxus-web = "0.4.0"
dioxus-router = "0.4.1"
fermi = "0.4.0"
simsearch = "0.2.4"

[package]
publish = false
version = "0.0.0"
name = "examples"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dev-dependencies]
dioxus-class = { workspace = true }
dioxus-tailwindcss = { workspace = true }
dioxus = { workspace = true }

lazy_static = { workspace = true }
im-rc = "15.1.0"
dioxus-desktop = "0.4.0"