[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/dioxus-class"
repository = "https://github.com/edger-dev/dioxus-class"

[workspace]
members = [
    "crates/dioxus-class",
    "crates/dioxus-tailwindcss",
    "crates/dioxus-daisyui",
    "demo/emoji-browser",
    "demo/emoji-browser/static",
]

resolver = "2"

[workspace.dependencies]
dioxus = "0.5.0-alpha.2"
dioxus-class = { path = "crates/dioxus-class", version = "0.5.0" }
dioxus-tailwindcss = { path = "crates/dioxus-tailwindcss", version = "0.5.0" }
dioxus-daisyui = { path = "crates/dioxus-daisyui", version = "0.5.0" }

paste = "1.0.11"

# demo
lazy_static = "1.4.0"
dioxus-ssr = "0.5.0-alpha.2"

simsearch = "0.2.4"
