[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/dioxus-class"
repository = "https://github.com/edger-dev/dioxus-class"

[workspace]
members = [
    "crates/dioxus-class",
    "crates/dioxus-class-internal",
    "crates/dioxus-class-macro",
    "crates/dioxus-tailwindcss",
    "crates/dioxus-daisyui",
    "demo/emoji-browser",
]

resolver = "2"

[workspace.dependencies]
dioxus = "0.5.0-alpha.2"
dioxus-class = { path = "crates/dioxus-class", version = "0.5.0" }
dioxus-class-internal = { path = "crates/dioxus-class-internal", version = "0.5.0" }
dioxus-class-macro = { path = "crates/dioxus-class-macro", version = "0.5.0" }
dioxus-tailwindcss = { path = "crates/dioxus-tailwindcss", version = "0.5.0" }
dioxus-daisyui = { path = "crates/dioxus-daisyui", version = "0.5.0" }

paste = "1.0.11"
fehler = "1.0"

quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full" ]}
procout = "0.1.13"

# demo
lazy_static = "1.4.0"
dioxus-ssr = "0.5.0-alpha.2"

simsearch = "0.2.4"
