[package]
name = "dioxus-class-macro"
version = "0.5.0"
description = "Dioxus class proc_macro"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
build-classes = [
    "lazy_static",
] 

[dependencies]
dioxus-class-internal = { workspace = true }

quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
fehler = { workspace = true }

lazy_static = { workspace = true, optional = true }
