[package]
version = "0.2.1"
name = "dioxus-class"
description = "Dioxus class"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
dioxus-class = { workspace = true }

dioxus-desktop = { workspace = true }
im-rc = { workspace = true }
lazy_static = { workspace = true }