[package]
name = "dioxus-daisyui"
version = "0.1.3"
edition = "2021"
license = "MIT"
homepage = "https://www.edger.dev"
repository = "https://github.com/edger-dev/dioxus-daisyui"
description = "Dioxus daisyui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "components",
]
components = [
    "dioxus-class/components",
]
build = [
    "dioxus-class/build",
]

[dependencies]
dioxus = { workspace = true }
dioxus-class = { workspace = true, default-features = false }
