[package]
name = "dioxus-daisyui"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://www.edger.dev"
repository = "https://github.com/edger-dev/dioxus-daisyui"
description = "Dioxus daisyui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
dioxus-tailwindcss = { workspace = true, default-features = false }
