[package]
version = "0.7.0"
name = "dioxus-daisyui"
description = "Dioxus daisyui"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-classes = [
    "dioxus-tailwindcss/build-classes",
]

[dependencies]
dioxus = { workspace = true }
dioxus-tailwindcss = { workspace = true }
lazy_static = { workspace = true }
