[package]
version = "0.4.0"
name = "dioxus-tailwindcss"
description = "Dioxus tailwindcss"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
dioxus-class = { workspace = true }