[package]
publish = false
version = "0.0.0"
name = "emoji-browser"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-daisyui = { workspace = true }
dioxus = { workspace = true }
lazy_static = { workspace = true }

emojic = { path = "../../external/emojic", features = [ "alloc" ] }

dioxus-web = "0.3.1"
dioxus-router = "0.3.0"
fermi = "0.3.0"
simsearch = "0.2.4"
