[package]
publish = false
version = "0.0.0"
name = "emoji-browser"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]

default = [
    "web",
]

web = [
    "dioxus/web",
    "dioxus/router",
]

build-classes = [
    "dioxus-daisyui/build-classes",
]

[build-dependencies]
dioxus-daisyui = { workspace = true }

[dependencies]
dioxus-daisyui = { workspace = true }

dioxus = { workspace = true }

lazy_static = { workspace = true }

emojic = { path = "../../external/emojic", features = [ "alloc" ] }

simsearch = { workspace = true }

wasm-logger = "0.2.0"
log = "0.4.22"
dioxus-logger = "0.6.0"
console_error_panic_hook = "0.1.7"
