[package]
name = "emoji-browser-static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
dioxus = { workspace = true }
dioxus-ssr = { workspace = true }
dioxus-daisyui = { workspace = true }
emoji-browser = { path = ".." }
